src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationStringAssignInt.deca
//Description :
//	affectation d'un int à une variable définie comme string
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : type incompatible <10, 6>

{
	String x;
	x = 3;
	println(x);
}